@@ -4,6 +4,8 @@
 * Fix   - Prevent error notices on checkout page load.
 * Tweak - Highlight rate call usage over limit on WooCommerce Shipping settings page.
 * Fix   - Connect carrier account link broken on subdirectory installs.
+* Fix   - Position dot in the center of radio buttons in "Create shipping label".
+* Fix   - Adjust radio button dot style in "Create shipping label" in high contrast mode on Windows.
 
 = 1.25.6 - 2021-01-26 =
 * Fix 	- Refreshes shipping methods after registering or removing carrier accounts.
